# gastometro

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  HANDOFF.md  MELHORIAS.md  README.md  alembic.ini  categorias.py  deploy.ps1  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml  extrator.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
alembic/: env.py
alembic/versions/: 418069adc183_fase_1_schema_inicial_pessoa_conta_.py  a7f3c2e91b04_orcamento_meta_e_escopo_categoria.py
analytics/: __init__.py  escopo.py  orcamento.py  recorrentes.py
app/: __init__.py  auth.py  estado.py  helpers.py  streamlit_app.py  ui_orcamento.py
app/paginas/: __init__.py  _importar_pdfs.py  casal.py  categorias.py  dashboard.py  faturas.py  importar.py  lancamentos.py  orcamento.py  recorrentes.py
db/: __init__.py  backup.py  consolidar_contas.py  engine.py  models.py  repository.py  seed.py
deploy/: Caddyfile
docs/: PLANO_LOGIN_GOOGLE.md
export/: __init__.py  excel.py
imports/: __init__.py  baixar_planilha_familiar.py  importar_planilha_familiar.py  migrar_excel_legado.py
parsers/: __init__.py  ailos.py  banco_brasil.py  base.py  nubank.py
scripts/: __init__.py  ci.sh  restaurar_banco.py
tests/: conftest.py  test_app_streamlit.py  test_auth.py  test_baixar_planilha_familiar.py  test_categorias.py  test_consolidar_contas.py  test_dashboard_grupos.py  test_escopo.py  test_estado.py  test_export_excel.py  test_importar_planilha_familiar.py  test_inferencia.py  test_migrar_excel_legado.py  test_parse_valor_brl.py  test_recorrentes.py  test_repository.py  test_restaurar_banco.py
